--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,32 +11,32 @@
       </h1>
       <nav class="main-nav">
         <ul class="navigation">
-          {% for link in site.menus.navigation %}
+          {% for link in site.data.menus.navigation %}
           <li class="{% if link.children %}nested {% endif %}{% if url == link.url %}current{% endif %}">
-            {% if link.children %}
-            <ul class="first-level">
-              {% for child in link.children %}
-              <li>
-                {% if child.children %}
-                <ul class="second-level">
-                  {% for child in child.children %}
-                  <li>
-                    <a href="{{ child.url | absolute_url }}">{{ child.title }}</a>
-                  </li>
-                  {% endfor %}
-                </ul>
-                {% endif %}
-                <a href="{{ child.url | absolute_url }}"{% if child.target %} target="_blank" {% endif %}>
-                  {{ child.title }}
-                  {% if child.childen %}
-                    <i class='icon-right-dir-2'></i>
-                  {% endif %}
-                </a>
-              </li>
-              {% endfor %}
-            </ul>
-            {% endif %}
-            <a href="{{ link.url | absolute_url }}"{% if link.target %} target="_blank" {% endif %}>
+<!--            {% if link.children %}-->
+<!--            <ul class="first-level">-->
+<!--              {% for child in link.children %}-->
+<!--              <li>-->
+<!--                {% if child.children %}-->
+<!--                <ul class="second-level">-->
+<!--                  {% for child in child.children %}-->
+<!--                  <li>-->
+<!--                    <a href="{{ child.url | absolute_url }}">{{ child.title }}</a>-->
+<!--                  </li>-->
+<!--                  {% endfor %}-->
+<!--                </ul>-->
+<!--                {% endif %}-->
+<!--                <a href="{{ child.url | absolute_url }}"{% if child.target %} target="_blank" {% endif %}>-->
+<!--                  {{ child.title }}-->
+<!--                  {% if child.childen %}-->
+<!--                    <i class='icon-right-dir-2'></i>-->
+<!--                  {% endif %}-->
+<!--                </a>-->
+<!--              </li>-->
+<!--              {% endfor %}-->
+<!--            </ul>-->
+<!--            {% endif %}-->
+            <a href="{{ link.url | absolute_url }}" {% if link.target %} target="_blank" {% endif %}>
                   {{ link.title }}
                   {% if link.childen %}
                     <i class='icon-chevron-down'></i>
